<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/locationTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_view_margin"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="location" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cityChooserTil"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_view_margin"
        android:layout_marginTop="@dimen/default_view_margin"
        android:layout_marginEnd="@dimen/small_view_margin"
        android:hint="@string/choose_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationTv">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/cityChooserAuto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/getForecastBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_view_margin"
        android:text="@string/get_forecast"
        app:layout_constraintEnd_toEndOf="@+id/cityChooserTil"
        app:layout_constraintStart_toStartOf="@+id/cityChooserTil"
        app:layout_constraintTop_toBottomOf="@+id/cityChooserTil" />

    <!-- region temperature -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/temperatureTv"
        style="@style/WeatherParamType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getForecastBtn" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/temperatureValueTv"
        style="@style/WeatherParamTypeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/temperatureTv"
        app:layout_constraintStart_toEndOf="@+id/temperatureTv"
        app:layout_constraintTop_toTopOf="@+id/temperatureTv" />
    <!-- endregion -->

    <!-- region feels like -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/feelsLikeTv"
        style="@style/WeatherParamType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feels_like"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperatureTv" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/feelsLikeValueTv"
        style="@style/WeatherParamTypeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/feelsLikeTv"
        app:layout_constraintStart_toEndOf="@+id/feelsLikeTv"
        app:layout_constraintTop_toTopOf="@+id/feelsLikeTv" />
    <!-- endregion -->

    <!-- region humidity -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/humidityTv"
        style="@style/WeatherParamType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humidity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feelsLikeTv" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/humidityValueTv"
        style="@style/WeatherParamTypeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/humidityTv"
        app:layout_constraintStart_toEndOf="@+id/humidityTv"
        app:layout_constraintTop_toTopOf="@+id/humidityTv" />
    <!-- endregion -->

    <!-- region weather -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/weatherTv"
        style="@style/WeatherParamType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weather"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/humidityTv" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/weatherValueTv"
        style="@style/WeatherParamTypeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/weatherTv"
        app:layout_constraintStart_toEndOf="@+id/weatherTv"
        app:layout_constraintTop_toTopOf="@+id/weatherTv" />
    <!-- endregion -->


</androidx.constraintlayout.widget.ConstraintLayout>